WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44419
WebCore/bridge/jni/v8 does not compile
https://bugs.webkit.org/show_bug.cgi?id=44419
Summary
WebCore/bridge/jni/v8 does not compile
Iain Merrick
Reported
2010-08-23 06:37:47 PDT
Some API changes were made to JavaScriptCore/runtime/UString.h in
http://trac.webkit.org/changeset/65305
. The JSC string implementation (in WebCore/bridge/jni/jsc) was updated, but the v8 string implementation was not updated and no longer compiles. The UTF8String() method needs to be renamed to utf8().
Attachments
Patch to make V8 strings compile
(4.73 KB, patch)
2010-08-23 06:58 PDT
,
Iain Merrick
no flags
Details
Formatted Diff
Diff
Patch to make V8 strings compile
(4.72 KB, patch)
2010-08-23 07:43 PDT
,
Iain Merrick
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Iain Merrick
Comment 1
2010-08-23 06:58:13 PDT
Created
attachment 65111
[details]
Patch to make V8 strings compile
Steve Block
Comment 2
2010-08-23 07:09:04 PDT
Comment on
attachment 65111
[details]
Patch to make V8 strings compile If you'd like the patch to be reviewed, you should set the r? flag. This will make the patch show up in the review queue and trigger the EWS bots. As a non-committer, you probably want to set cq? too, to request the reviewer to add the patch to the commit-queue once reviewed.
Steve Block
Comment 3
2010-08-23 07:30:44 PDT
Comment on
attachment 65111
[details]
Patch to make V8 strings compile WebCore/ChangeLog:5 + Make V8 string wrappers compatible with JavaScriptCore/runtime/UString.h I think this title is a little confusing. We're fixing the JNI bridge for V8. The problem is that the declaration of JavaString has been changed but the V8 implementation was not updated. Maybe 'Update JNI bridge for V8 after renaming of JavaString::utf8()'
Iain Merrick
Comment 4
2010-08-23 07:43:26 PDT
Created
attachment 65118
[details]
Patch to make V8 strings compile Modified ChangeLog per steveblock's comment
Steve Block
Comment 5
2010-08-23 07:46:26 PDT
Comment on
attachment 65118
[details]
Patch to make V8 strings compile r=me
WebKit Commit Bot
Comment 6
2010-08-23 14:52:29 PDT
Comment on
attachment 65118
[details]
Patch to make V8 strings compile Clearing flags on attachment: 65118 Committed
r65833
: <
http://trac.webkit.org/changeset/65833
>
WebKit Commit Bot
Comment 7
2010-08-23 14:52:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug