2010-08-23  Iain Merrick  <husky@google.com>

Reviewed by Steve Block.

        Update JNI bridge for V8 after renaming of JavaString::utf8().
        https://bugs.webkit.org/show_bug.cgi?id=44419

        This fixes the build on Android. No new functionality, so no new tests.

        * bridge/jni/v8/JNIBridgeV8.cpp:
        (JavaField::JavaField):
        * bridge/jni/v8/JNIBridgeV8.h:
        (JSC::Bindings::JavaField::type):
        * bridge/jni/v8/JavaClassV8.cpp:
        (JavaClass::JavaClass):
        * bridge/jni/v8/JavaNPObjectV8.cpp:
        (JSC::Bindings::JavaNPObjectGetProperty):
        * bridge/jni/v8/JavaStringV8.h:
        (JSC::Bindings::JavaStringImpl::utf8):

Canonical link: https://commits.webkit.org/56612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65833 268f45cc-cd09-0410-ab3c-d52691b4dbfc