WebCore/bridge/jni/v8/JavaNPObjectV8.cpp
@@ -155,7 +155,7 @@ bool JavaNPObjectGetProperty(NPObject* obj, NPIdentifier identifier, NPVariant* 
 
     jvalue value = getJNIField(instance->javaInstance(),
                                field->getJNIType(),
-                               field->name().UTF8String(),
+                               field->name().utf8(),
                                field->type());
 
     convertJValueToNPVariant(value, field->getJNIType(), field->type(), result);
