WebCore/bridge/jni/v8/JavaStringV8.h
@@ -46,7 +46,7 @@ public:
         releaseCharactersForJStringInEnv(e, s, cs);
     }
 
-    const char* UTF8String() const { return m_utf8String.data(); }
+    const char* utf8() const { return m_utf8String.data(); }
     const jchar* uchars() const { return 0; } // Not implemented
     int length() const { return m_utf8String.length(); }
 
